Fix internal links
These changed with the restructuring of the repository files.

--- a/docs/data-builder/ehrql/tutorial/2a.md
+++ b/docs/data-builder/ehrql/tutorial/2a.md
@@ -72,7 +72,7 @@ The final line of dataset definition finds the most recently prescribed Dictiona
 
 This is done by sorting the table by `processing_date`
 and picking the last entry for a patient.
-You can see the `sort_by` method described in the [ehrQL reference](ehrql-reference.md#212-sort-by-column-pick-last).
+You can see the `sort_by` method described in the [ehrQL reference](../reference.md#212-sort-by-column-pick-last).
 
 We will see more on working with dates in a later tutorial.
 
