--- a/docs/data-builder/ehrql/tutorial/3a.md
+++ b/docs/data-builder/ehrql/tutorial/3a.md
@@ -141,7 +141,7 @@ and floating point numbers ("floats") to other floats.
 Data Builder will give an error
 if you try to compare incompatible types in your dataset definition.
 
-The [Contracts reference](contracts-reference.md) tells you
+The [Contracts reference](../../contracts/reference.md) tells you
 which data type each table column has.
 This tells you what kinds of values and columns you can directly compare with.
 
