--- a/docs/data-builder/ehrql/tutorial/4a.md
+++ b/docs/data-builder/ehrql/tutorial/4a.md
@@ -108,7 +108,7 @@ indicated by their presence as rows in the hospitalisation subset.
 ### Extracting components of data
 
 Next, we restrict the population to patients
-who meet our [criteria](ehrql-new-tutorial-4a.md#summary).
+who meet our [criteria](4a.md#summary).
 
 We then add `sex` and `year_of_birth` to the dataset.
 
@@ -154,7 +154,7 @@ Run the dataset definition.
     1. Can you modify the date conditions in this dataset definition
        to _include_ both dates in the range,
        instead of excluding the specified end date?
-       See the [ehrQL reference](ehrql-reference.md) for the operations and methods on dates.
+       See the [ehrQL reference](../reference.md) for the operations and methods on dates.
     2. Can you modify the dataset definition
        to find the date seven days after hospitalisation?
     3. Can you modify the dataset definition to find the 15th of the month of hospitalisation?
