--- a/docs/data-builder/ehrql/tutorial/7a.md
+++ b/docs/data-builder/ehrql/tutorial/7a.md
@@ -9,9 +9,9 @@ For research, codes are often collated into *codelists* to classify patients.
 Data Builder can use codelists to help extract information about patient groups of interest.
 
 !!! info
-    There is [more information about codelists](codelist-intro.md) elsewhere in OpenSAFELY's documentation.
+    There is [more information about codelists](../../../codelist-intro.md) elsewhere in OpenSAFELY's documentation.
     We also have a codelist builder tool,
-    [OpenCodelists](codelist-creation.md),
+    [OpenCodelists](../../../codelist-creation.md),
     that you may find useful when creating codelists.
 
 ## Example dataset definition 7: Codes and codelists
