--- a/docs/data-builder/ehrql/tutorial/6a.md
+++ b/docs/data-builder/ehrql/tutorial/6a.md
@@ -107,7 +107,7 @@ by using `maximum_for_patient()`.
        How would we rewrite that same selection to use a single `drop()`?
     2. How would we find the *sum* of the numeric values of the `m1` clinical events
        for each patient within the same date range already specified?
-       Refer to the [ehrQL reference](ehrql-reference.md).
+       Refer to the [ehrQL reference](../reference.md).
     2. As the dataset definition shows,
        we can use combine multiple filters using `take()` and `drop()`
        in different ways.
@@ -125,7 +125,7 @@ by using `maximum_for_patient()`.
          or more consise to read.
 
          Can you rewrite the `take()` with multiple conditions to be a series of chained `take()` methods?
-         Refer to the [ehrQL reference](ehrql-reference.md).
+         Refer to the [ehrQL reference](../reference.md).
 
         !!! todo
             In general, do we want to suggest particular ehrQL idioms?
