Tidy a few more links
Fixing issues spotted after rebasing.

* Retitle "explainer" to "explanation" for consistency with other pages
* Move a Data Builder page that was at the top-level, and fix relative
  links in that document

--- a/docs/data-builder/ehrql/tutorial/3a.md
+++ b/docs/data-builder/ehrql/tutorial/3a.md
@@ -69,7 +69,7 @@ This introduces a distinction between *patient-level* and *event-level* tables:
 * `patient` is a patient-level table where one row represents one patient
 * `patient_address` is event-level where each row is an event and a patient can have many events.
    In this case, someone might move house and have a new address.
-   See the [explainer](data-builder-patient-event-tables) for more information.
+   See the [explainer](../../patient-event-tables-explanation.md) for more information.
 
 ### Address by date
 
